--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,15 @@
 :root {
-  --bg-color: #0d1117;         /* Very dark background */
-  --text-primary: #c9d1d9;     /* Light gray for main text */
-  --text-secondary: #8b949e;   /* Dimmed text */
-  --accent-color: #58a6ff;     /* Soft blue (links, highlights) */
-  --success-color: #2ea043;    /* GitHub-like green */
-  --border-color: #30363d;     /* Subtle border */
-  --code-bg: #161b22;          /* For code blocks / cards */
+  --bg-color: #0d1117; /* Very dark background */
+  --text-primary: #c9d1d9; /* Light gray for main text */
+  --text-secondary: #8b949e; /* Dimmed text */
+  --accent-color: #58a6ff; /* Soft blue (links, highlights) */
+  --success-color: #2ea043; /* GitHub-like green */
+  --border-color: #30363d; /* Subtle border */
+  --code-bg: #161b22; /* For code blocks / cards */
 }
 
-body, body *{
+body,
+body * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -25,13 +26,11 @@ body {
 }
 
 .material-symbols-outlined {
-    user-select: none;
-    color: var(--text-secondary);
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-  }
-
-
+  user-select: none;
+  color: var(--text-secondary);
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 24;
+}
