update: project section to white

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 :root {
   --bg-color: #0d1117; /* Very dark background */
-  --bg-color2: #102f5c; /* Very dark background */
+  --bg-color2: #c9d1d9; /* Very dark background */
   --text-primary: #c9d1d9; /* Light gray for main text */
   --text-secondary: #8b949e; /* Dimmed text */
   --accent-color: #58a6ff; /* Soft blue (links, highlights) */
